--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+/config/database.yml
+/config/secrets.yml
+/config/credentials.yml.enc
 
 /public/packs
 /public/packs-test
@@ -32,3 +35,4 @@ yarn-debug.log*
 .yarn-integrity
 
 /Notes.todo
+
