.env example file

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_USERNAME='pguser'
+DATABASE_USERNAME='username'
 DATABASE_PASSWORD=''
 DATABASE_HOST='localhost'
 DATABASE_PREFIX='greyhat'
