--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /config/secrets.yml
+/config/deploy/*
 /config/credentials.yml.enc
 /config/initializers/recaptcha.rb
 sync.sh
