docker deploy to norbu

--- a/config/database.yml
+++ b/config/database.yml
@@ -14,5 +14,7 @@ test:
   database: <%= ENV['DATABASE_PREFIX'] %>-test
 
 production:
-  <<: *default
-  database: <%= ENV['DATABASE_PREFIX'] %>
+  adapter: postgresql
+  url: <%= ENV['DATABASE_URL'] %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+
