--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
-DATABASE_USERNAME='username'
-DATABASE_PASSWORD=''
-DATABASE_PREFIX='greyhat'
+# Database Configuration
+POSTGRES_DB=greyhat_production
+POSTGRES_USER=alex
+POSTGRES_PASSWORD=your_secure_password_here
+
+# Rails Configuration
+RAILS_ENV=production
+RAILS_MASTER_KEY=your_rails_master_key_here
+SECRET_KEY_BASE=your_secret_key_base_here
