--- a/config/database.yml
+++ b/config/database.yml
@@ -1,13 +1,14 @@
 default: &default
   adapter:  postgresql
   encoding: unicode
+  host:     database
   port:     5432
   username: <%= ENV['DATABASE_USERNAME'] %>
   password: <%= ENV['DATABASE_PASSWORD'] %>
 
 development:
   <<: *default
-  database: <%= ENV['DATABASE_PREFIX'] %>-development
+  database: <%= ENV['DATABASE_PREFIX'] %>_development
 
 test:
   <<: *default
