--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,44 +5,59 @@ services:
     image: postgres:16-alpine
     container_name: greyhat_postgres
     environment:
-      POSTGRES_DB: greyhat_production
-      POSTGRES_USER: alexertech
-      POSTGRES_PASSWORD: super_secure_password_2025
+      POSTGRES_DB: ${POSTGRES_DB:-greyhat_production}
+      POSTGRES_USER: ${POSTGRES_USER:-alex}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_INITDB_ARGS: "--auth-host=scram-sha-256"
+      PGUSER: ${POSTGRES_USER:-alex}
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - greyhat_postgres_data:/var/lib/postgresql/data
+      - ./db/init:/docker-entrypoint-initdb.d
     networks:
       - caddy_net
-      - app_internal
+      - greyhat_internal
+    restart: unless-stopped
+
+  redis:
+    image: redis:7-alpine
+    container_name: greyhat_redis
+    volumes:
+      - greyhat_redis_data:/data
+    networks:
+      - greyhat_internal
     restart: unless-stopped
 
   web:
     build: .
-    container_name: greyhat_com
+    container_name: greyhat_web
     environment:
-      RAILS_ENV: production
-      DATABASE_URL: postgresql://alexertech:super_secure_password_2025@database:5432/greyhat_production
+      RAILS_ENV: ${RAILS_ENV:-production}
+      DATABASE_URL: postgresql://${POSTGRES_USER:-alex}:${POSTGRES_PASSWORD}@database:5432/${POSTGRES_DB:-greyhat_production}
+      REDIS_URL: redis://redis:6379/0
       RAILS_SERVE_STATIC_FILES: "true"
-      RAILS_MASTER_KEY: bcd4cd0e61a6a468c85c170a969a5c8c
+      RAILS_MASTER_KEY: ${RAILS_MASTER_KEY}
+      SECRET_KEY_BASE: ${SECRET_KEY_BASE}
       RAILS_LOG_TO_STDOUT: "true"
     depends_on:
       - database
+      - redis
     volumes:
-      - storage_data:/app/storage
+      - ./storage:/app/storage
+    ports:
+      - "3001:3000"
     networks:
       - caddy_net
-      - app_internal
+      - greyhat_internal
     restart: unless-stopped
 
 volumes:
-  postgres_data:
-    driver: local
-  storage_data:
-    driver: local
+  greyhat_postgres_data:
+  greyhat_redis_data:
 
 networks:
   caddy_net:
     external: true
-  app_internal:
+  greyhat_internal:
+    name: greyhat_cl_internal
     driver: bridge
     internal: true
