--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,12 @@ services:
   database:
     image: postgres:16-alpine
     container_name: greyhat_postgres
-    env_file:
-      - .env
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB:-greyhat_production}
+      POSTGRES_USER: ${POSTGRES_USER:-alex}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_INITDB_ARGS: "--auth-host=scram-sha-256"
+      PGUSER: ${POSTGRES_USER:-alex}
     volumes:
       - greyhat_postgres_data:/var/lib/postgresql/data
       - ./db/init:/docker-entrypoint-initdb.d
@@ -26,8 +30,14 @@ services:
   web:
     build: .
     container_name: greyhat_web
-    env_file:
-      - .env
+    environment:
+      RAILS_ENV: ${RAILS_ENV:-production}
+      DATABASE_URL: postgresql://${POSTGRES_USER:-alex}:${POSTGRES_PASSWORD}@database:5432/${POSTGRES_DB:-greyhat_production}
+      REDIS_URL: redis://redis:6379/0
+      RAILS_SERVE_STATIC_FILES: "true"
+      RAILS_MASTER_KEY: ${RAILS_MASTER_KEY}
+      SECRET_KEY_BASE: ${SECRET_KEY_BASE}
+      RAILS_LOG_TO_STDOUT: "true"
     depends_on:
       - database
       - redis
