--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,26 @@
+# Production Environment Variables for Docker Compose
+# Copy this file to .env.production on your server and fill in the values
+
 # Database Configuration
 POSTGRES_DB=greyhat_production
 POSTGRES_USER=alex
 POSTGRES_PASSWORD=your_secure_password_here
 
+# Redis Configuration
+REDIS_PASSWORD=your_redis_password_here
+
 # Rails Configuration
 RAILS_ENV=production
 RAILS_MASTER_KEY=your_rails_master_key_here
 SECRET_KEY_BASE=your_secret_key_base_here
+
+# Deployment Configuration
+DOCKER_SERVER=192.168.0.50
+DOCKER_USER=alex
+APP_NAME=greyhat_cl
+
+# Important Notes:
+# - Generate SECRET_KEY_BASE with: docker run --rm greyhat_cl-web bundle exec rails secret
+# - Get RAILS_MASTER_KEY from config/master.key (don't commit this file)
+# - Use strong passwords for POSTGRES_PASSWORD and REDIS_PASSWORD
+# - Ensure these match the values used in your current deployment
