--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,30 @@
-# Production Environment Variables for Docker Compose
-# Copy this file to .env.production on your server and fill in the values
+# =============================================================================
+# Docker Environment Configuration
+# =============================================================================
 
-# Database Configuration
-POSTGRES_DB=greyhat_production
-POSTGRES_USER=alex
-POSTGRES_PASSWORD=your_secure_password_here
+# Database
+POSTGRES_DB=greyhat_development
+POSTGRES_USER=greyhat
+POSTGRES_PASSWORD=greyhat
+POSTGRES_PORT=5432
 
-# Redis Configuration
-REDIS_PASSWORD=your_redis_password_here
+# Rails
+RAILS_ENV=development
+RAILS_PORT=3000  # For local dev. In production, Caddy proxies to port 3000 internally
+RAILS_SERVE_STATIC_FILES=true
+RAILS_LOG_TO_STDOUT=true
 
-# Rails Configuration
-RAILS_ENV=production
-RAILS_MASTER_KEY=your_rails_master_key_here
-SECRET_KEY_BASE=your_secret_key_base_here
+# Production only (optional in development)
+# RAILS_MASTER_KEY=
+# SECRET_KEY_BASE=
 
-# Deployment Configuration
-DOCKER_SERVER=192.168.0.50
-DOCKER_USER=alex
-APP_NAME=greyhat_cl
-
-# Important Notes:
-# - Generate SECRET_KEY_BASE with: docker run --rm greyhat_cl-web bundle exec rails secret
-# - Get RAILS_MASTER_KEY from config/master.key (don't commit this file)
-# - Use strong passwords for POSTGRES_PASSWORD and REDIS_PASSWORD
-# - Ensure these match the values used in your current deployment
+# =============================================================================
+# Production Example (with Caddy reverse proxy):
+# =============================================================================
+# RAILS_ENV=production
+# POSTGRES_DB=greyhat_production
+# POSTGRES_USER=greyhat
+# POSTGRES_PASSWORD=secure_production_password
+# RAILS_MASTER_KEY=your_master_key
+# SECRET_KEY_BASE=your_secret_key_base
+# RAILS_PORT=3000  # Not exposed externally - Caddy proxies from 80/443 to greyhat_web:3000
