--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,33 @@
 # =============================================================================
 # Docker Environment Configuration
 # =============================================================================
+# Just set RAILS_ENV and POSTGRES_PASSWORD - everything else adapts
 
-# Database
-POSTGRES_DB=greyhat_development
-POSTGRES_USER=greyhat
-POSTGRES_PASSWORD=greyhat
-POSTGRES_PORT=5432
-
-# Rails
+# Rails Environment (development or production)
 RAILS_ENV=development
-RAILS_PORT=3000  # For local dev. In production, Caddy proxies to port 3000 internally
-RAILS_SERVE_STATIC_FILES=true
-RAILS_LOG_TO_STDOUT=true
 
-# Production only (optional in development)
-# RAILS_MASTER_KEY=
-# SECRET_KEY_BASE=
+# Database Password (REQUIRED)
+POSTGRES_PASSWORD=greyhat
+
+# Optional Overrides (usually not needed)
+# POSTGRES_DB=  # Defaults to greyhat_${RAILS_ENV}
+# POSTGRES_USER=greyhat
+# POSTGRES_PORT=5432
+# RAILS_PORT=3000
+# RAILS_SERVE_STATIC_FILES=true
+# RAILS_LOG_TO_STDOUT=true
+# CADDY_NETWORK=caddy_net
+
+# Production requires:
+# RAILS_MASTER_KEY=  # From config/master.key
+# SECRET_KEY_BASE=  # Generate: docker compose run --rm web bundle exec rails secret
 
 # =============================================================================
-# Production Example (with Caddy reverse proxy):
+# Production Example:
 # =============================================================================
 # RAILS_ENV=production
-# POSTGRES_DB=greyhat_production
-# POSTGRES_USER=greyhat
 # POSTGRES_PASSWORD=secure_production_password
 # RAILS_MASTER_KEY=your_master_key
 # SECRET_KEY_BASE=your_secret_key_base
-# RAILS_PORT=3000  # Not exposed externally - Caddy proxies from 80/443 to greyhat_web:3000
+#
+# Result: Uses greyhat_production database, Caddy proxy on caddy_net
