--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,17 @@
-# =============================================================================
-# Docker Environment Configuration
-# =============================================================================
-# Just set RAILS_ENV and POSTGRES_PASSWORD - everything else adapts
+# Rails Environment
+RAILS_ENV=production
 
-# Rails Environment (development or production)
-RAILS_ENV=development
-
-# Database Password (REQUIRED)
+# Database (REQUIRED - no defaults)
+POSTGRES_USER=greyhat
 POSTGRES_PASSWORD=greyhat
+POSTGRES_DB=greyhat_production
 
-# Optional Overrides (usually not needed)
-# POSTGRES_DB=  # Defaults to greyhat_${RAILS_ENV}
+# Rails Keys (REQUIRED for production)
+RAILS_MASTER_KEY=
+SECRET_KEY_BASE=
+
+# Development example:
+# RAILS_ENV=development
 # POSTGRES_USER=greyhat
-# POSTGRES_PORT=5432
-# RAILS_PORT=3000
-# RAILS_SERVE_STATIC_FILES=true
-# RAILS_LOG_TO_STDOUT=true
-# CADDY_NETWORK=caddy_net
-
-# Production requires:
-# RAILS_MASTER_KEY=  # From config/master.key
-# SECRET_KEY_BASE=  # Generate: docker compose run --rm web bundle exec rails secret
-
-# =============================================================================
-# Production Example:
-# =============================================================================
-# RAILS_ENV=production
-# POSTGRES_PASSWORD=secure_production_password
-# RAILS_MASTER_KEY=your_master_key
-# SECRET_KEY_BASE=your_secret_key_base
-#
-# Result: Uses greyhat_production database, Caddy proxy on caddy_net
+# POSTGRES_PASSWORD=greyhat
+# POSTGRES_DB=greyhat_development
