--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,8 @@ services:
 
 networks:
   greyhat_network:
+    name: greyhat_network
     driver: bridge
   caddy_net:
+    name: caddy_net
     external: true
