--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     container_name: greyhat_web
     environment:
       RAILS_ENV: ${RAILS_ENV}
-      POSTGRES_HOST: database
+      POSTGRES_HOST: greyhat_postgres
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
